k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector: # se conecta com o label
    matchLabels:
      component: web
  template: #template for the pods
    metadata:
      labels:
        component: web
    spec:
      containers:
      - name: client
        image: paulo1410/multi-client
        ports:
          - containerPort: 3000
